--- a/log-beta.html
+++ b/log-beta.html
@@ -61,7 +61,7 @@
     const contactTag = "contact";
     const diaryTag = "diary";
     const eventTag = "diary";
-    const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}&-${contactTag}&-${diaryTag}`;
+    const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}&-${contactTag}&-${diaryTag}&-${eventTag}`;
 
     window.addEventListener("load", () => {
         loadNotes();
