--- a/log-beta.html
+++ b/log-beta.html
@@ -820,7 +820,7 @@
         subList.forEach(d => {
             message = `${message}[${d.date}]\n\n`;
             d.tasks.forEach(t => {
-                message = `${message}- ${t.item} !${t.name}\n`;
+                message = !!t.name ? `${message}- ${t.item} !${t.name}\n` : `${message}- ${t.item}\n`;
             });
             message = `${message}\n`;
         });
