--- a/log-beta.html
+++ b/log-beta.html
@@ -60,7 +60,7 @@
     const functionTag = "function";
     const contactTag = "contact";
     const diaryTag = "diary";
-    const eventTag = "diary";
+    const eventTag = "event";
     const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}&-${contactTag}&-${diaryTag}&-${eventTag}`;
 
     window.addEventListener("load", () => {
