--- a/log-beta.html
+++ b/log-beta.html
@@ -947,9 +947,10 @@
         }
 
         let evMessage = "";
+        events.sort((a, b) => a.date - b.date);
         events.forEach(e => {
-            let number = new Date(e.date).getDate().toString().padStart(3, " ");
-            evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@[a-z0-9-]+/g, "")}\n`;
+            let number = new Date(e.date).getDate().toString().padStart(4, "\xA0");
+            evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "")}\n`;
         });
 
         return `[${title}]\n\n${columns}\n\n${lines}\n\n${evMessage}`;
