--- a/log-beta.html
+++ b/log-beta.html
@@ -953,7 +953,7 @@
             evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "")}\n`;
         });
 
-        return `[${title}]\n\n${columns}\n\n${lines}\n\n${evMessage}`;
+        return `[${title}]\n\n${columns}\n\n${lines}${evMessage}`;
     }
 
     extractDate = (text) => {
