--- a/log-beta.html
+++ b/log-beta.html
@@ -952,8 +952,9 @@
             let number = new Date(e.date).getDate().toString().padStart(3, "\xA0");
             evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "")}\n`;
         });
+        evMessage = !!evMessage ? `\n\n${evMessage}` : evMessage;
 
-        return `[${title}]\n\n${columns}\n\n${lines}\n${evMessage}`;
+        return `[${title}]\n\n${columns}\n\n${lines}${evMessage}`;
     }
 
     extractDate = (text) => {
