--- a/log-beta.html
+++ b/log-beta.html
@@ -952,7 +952,7 @@
             let number = new Date(e.date).getDate().toString().padStart(3, "\xA0");
             evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "")}\n`;
         });
-        evMessage = !!evMessage ? `\n\n${evMessage}` : evMessage;
+        evMessage = !!evMessage ? `\n${evMessage}` : evMessage;
 
         return `[${title}]\n\n${columns}\n\n${lines}${evMessage}`;
     }
