--- a/log.html
+++ b/log.html
@@ -60,7 +60,8 @@
     const functionTag = "function";
     const contactTag = "contact";
     const diaryTag = "diary";
-    const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}&-${contactTag}&-${diaryTag}`;
+    const eventTag = "event";
+    const skipTags = `-${linkTag}&-${expenseTag}&-${taskTag}&-${listTag}&-${functionTag}&-${contactTag}&-${diaryTag}&-${eventTag}`;
 
     window.addEventListener("load", () => {
         loadNotes();
@@ -238,6 +239,11 @@
                 doContact(content);
                 break;
             }
+            case ".event": {
+                showStatus(action);
+                doEvent(content);
+                break;
+            }
             default: {
                 showStatus(`${action} - failed`);
             }
@@ -294,14 +300,14 @@
         let date = new Date();
         let calendar = "";
         if (content.indexOf("&") > 0) {
-            content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(date.getFullYear(), m-1, 1))}\n\n\n`);
+            content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(date.getFullYear(), m-1, 1), eventTag)}\n\n`);
         } else if (content.length == 1 || content.length == 2) { 
             date.setMonth(parseInt(content)-1);
-            calendar = getCalendar(date);
+            calendar = getCalendar(date, eventTag);
         } else if (content.length == 4) {
-            [0,1,2,3,4,5,6,7,8.9,10,11].forEach(m => calendar = `${calendar}${getCalendar(new Date(parseInt(content), m, 1))}\n\n\n`);
+            [0,1,2,3,4,5,6,7,8.9,10,11].forEach(m => calendar = `${calendar}${getCalendar(new Date(parseInt(content), m, 1), eventTag)}\n\n`);
         } else {
-            calendar = getCalendar(date);
+            calendar = getCalendar(date, eventTag);
         }
 
         showData(calendar, append, "\n");
@@ -345,6 +351,11 @@
     doTask = (content) => {
         content = convertFilter(content);
         showTasks(filterData(`tag:${taskTag}&-${hiddenTag}+${content}`));
+    }
+
+    doEvent = (content) => {
+        content = convertFilter(content);
+        showTasks(filterData(`tag:${eventTag}&-${hiddenTag}+${content}`));
     }
 
     doContact = (content) => {
@@ -791,7 +802,7 @@
         list.sort((a, b) => new Date(a.date) - new Date(b.date));
         list.forEach(l => {
             let names = l.text.match(/![a-z0-9-]+/g);
-            let name = (names || []).length > 0 ? names[0].substring(1) : taskTag;
+            let name = (names || []).length > 0 ? names[0].substring(1) : "";
             let item = l.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "");
             let date = isoToString(l.date);
             let matchingDate = subList.find(sl => sl.date == date);
@@ -809,7 +820,7 @@
         subList.forEach(d => {
             message = `${message}[${d.date}]\n\n`;
             d.tasks.forEach(t => {
-                message = `${message}- ${t.item} !${t.name}\n`;
+                message = !!t.name ? `${message}- ${t.item} !${t.name}\n` : `${message}- ${t.item}\n`;
             });
             message = `${message}\n`;
         });
@@ -914,20 +925,36 @@
         return `${Math.floor(s/3600).toString().padStart(2,"0")}:${Math.floor(s%3600/60).toString().padStart(2,"0")}:${Math.floor(s%60).toString().padStart(2,"0")}`;
     }
 
-    getCalendar = (date) => {
+    getCalendar = (date, tag = "") => {
         let title = date.toLocaleString("default", { month: "long", year: "numeric"});
         let columns = "mon tue wed thu fri sat sun";
         let day = date.getDay();
         let start = new Date(date.getFullYear(), date.getMonth(), 1);
         let end = new Date(date.getFullYear(), date.getMonth() + 1, 0);
+        let events = !!tag ? filterData(`tag:${tag}+date:${isoToString(start)}-${isoToString(end)}`) : [];
 
         let lines = "\xA0\xA0\xA0\xA0".repeat(start.getDay() == 0 ? 6 : start.getDay()-1);
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
-            let mark = isoToString(new Date()) == isoToString(d) ? "`" : "\xA0";
-            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, mark)}${d.getDay() == 0 ? "\n\n" : ""}`;
+            let currDate = isoToString(d);
+            let mark = "\xA0";
+            if (currDate == isoToString(new Date())) {
+                mark = "°";
+            } else if (events.some(e => isoToString(e.date) == currDate)) {
+                mark = "`";
+            }
+            
+            lines = `${lines}${d.getDate().toString().padStart(3, "\xA0").padEnd(4, mark)}${d.getDay() == 0 && isoToString(d) != isoToString(end) ? "\n\n" : ""}`;
         }
 
-        return `[${title}]\n\n${columns}\n\n${lines}`;
+        let evMessage = "";
+        events.sort((a, b) => new Date(a.date) - new Date(b.date));
+        events.forEach(e => {
+            let number = new Date(e.date).getDate().toString().padStart(3, "\xA0");
+            evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "")}\n`;
+        });
+        evMessage = !!evMessage ? `\n\n${evMessage}` : `\n${evMessage}`;
+
+        return `[${title}]\n\n${columns}\n\n${lines}${evMessage}`;
     }
 
     extractDate = (text) => {
