--- a/log-beta.html
+++ b/log-beta.html
@@ -950,7 +950,10 @@
         events.sort((a, b) => new Date(a.date) - new Date(b.date));
         events.forEach(e => {
             let number = new Date(e.date).getDate().toString().padStart(2, "\xA0");
-            evMessage = `${evMessage}${number} - ${e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "")}\n`;
+            let name = (names || []).length > 0 ? names[0].substring(1) : "";
+            let text = e.text.replace(/![a-z0-9-]+/g, "").replace(/#[a-z0-9-]+/g, "").replace(/@\S+/g, "");
+            text = !!name ? `${text} !${name}` : text;
+            evMessage = `${evMessage}${number} - ${text}\n`;
         });
         evMessage = !!evMessage ? `\n\n${evMessage}` : `\n${evMessage}`;
 
