--- a/log-beta.html
+++ b/log-beta.html
@@ -301,7 +301,7 @@
         }
         
         doTask(content);        
-        doCalendar(`${date.getMonth() + 1}`, true);
+        doCalendar(null, true);
     }
 
     doCalendar = (content, append = false) => {
