--- a/log-beta.html
+++ b/log-beta.html
@@ -301,7 +301,7 @@
         }
         
         doTask(content);        
-        doCalendar(null, true);
+        doCalendar(isoToString(date), true);
     }
 
     doCalendar = (content, append = false) => {
