--- a/log-beta.html
+++ b/log-beta.html
@@ -310,6 +310,7 @@
         if (content.indexOf("&") > 0) {
             content.split("&").forEach(m => calendar = `${calendar}${getCalendar(new Date(date.getFullYear(), m-1, 1), eventTag)}\n\n`);
         } else if (content.length == 1 || content.length == 2) { 
+            date.setDate(1);
             date.setMonth(parseInt(content)-1);
             calendar = getCalendar(date, eventTag);
         } else if (content.length == 4) {
@@ -953,7 +954,7 @@
         let day = date.getDay();
         let start = new Date(date.getFullYear(), date.getMonth(), 1);
         let end = new Date(date.getFullYear(), date.getMonth() + 1, 0);
-        let events = !!tag ? filterData(`tag:${tag}+date:${isoToString(date)}-${isoToString(end)}`) : [];
+        let events = !!tag ? filterData(`tag:${tag}+date:${isoToString(start)}-${isoToString(end)}`) : [];
 
         let lines = "\xA0\xA0\xA0\xA0".repeat(start.getDay() == 0 ? 6 : start.getDay()-1);
         for (let d = start; d <= end; d.setDate(d.getDate() + 1)) {
@@ -969,6 +970,7 @@
         }
 
         let evMessage = "";
+        events = events.filter(e => new Date(isoToString(e.date) >= date);
         events.sort((a, b) => new Date(a.date) - new Date(b.date));
         events.forEach(e => {
             let number = new Date(e.date).getDate().toString().padStart(2, "\xA0");
