--- a/log-beta.html
+++ b/log-beta.html
@@ -834,6 +834,7 @@
             });
             message = `${message}\n`;
         });
+        message = message.length > 0 ? message.substring(message.length - 1);
         showData(message);
         showStatus(list.length, true);
     }
