--- a/log-beta.html
+++ b/log-beta.html
@@ -301,7 +301,7 @@
         }
         
         doTask(content);        
-        doCalendar(`@${isoToString(date)}`, true);
+        doCalendar(`@${isoToString(date)}`);
     }
 
     doCalendar = (content, append = false) => {
