--- a/log-beta.html
+++ b/log-beta.html
@@ -320,7 +320,7 @@
             calendar = getCalendar(date, eventTag);
         }
 
-        showData(calendar, append, "");
+        showData(calendar, append, "\n");
 
         if (!append) {
             showStatus("done", true);
@@ -932,8 +932,12 @@
         a.click();
     }
 
-    showData = (text, append = false, splitter = "") => document.getElementById("dv").innerText = `${append ? document.getElementById("dv").innerText + splitter : ""}${text}`;
-
+    showData = (text, append = false, splitter = "") => {
+        let existing = document.getElementById("dv").innerText;
+        let newContent = append && !!existing ? `${text}${splitter}` : text;
+        document.getElementById("dv").innerText = append ? `${newContent}${existing}` : text;
+    }
+    
     showStatus = (text, append, splitter = " - ") => document.getElementById("spn").innerText = `${append ? document.getElementById("spn").innerText + splitter : ""}${text}`;
 
     saveNotes = () => localStorage.setItem("notes", JSON.stringify(notes));
