--- a/log-beta.html
+++ b/log-beta.html
@@ -934,7 +934,7 @@
 
     showData = (text, append = false, splitter = "") => {
         let existing = document.getElementById("dv").innerText;
-        let newContent = append && !!existing ? `${text}${splitter}` : text;
+        let newContent = append && !!existing ? `${splitter}${text}` : text;
         document.getElementById("dv").innerText = append ? `${existing}${newContent}` : text;
     }
     
