--- a/log-beta.html
+++ b/log-beta.html
@@ -14,23 +14,26 @@
     <span id="spn"></span>
     <br />
     <div class="container">
-        <div class="tags">
+        <div class="button">
             <button id="btnAdd">+</button>
         </div>
-        <div class="tags">
+        <div class="button">
             <button id="btnSearch">S</button>
         </div>
-        <div class="tags">
+        <div class="button">
+            <button id="btnGo">G</button>
+        </div>
+        <div class="button">
             <button id="btnClear">X</button>
         </div>
     </div>
     <div class="container">
         <div class="tags">
-            <input type="text" id="tbTag"/>
+            <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag"/>
             <dv id="dvTags"></div>
         </div>
         <div class="names">
-            <input type="text" id="tbName"/>
+            <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name"/>
             <dv id="dvNames"></div>
         </div>
         <div class="dates">
