--- a/log-beta.html
+++ b/log-beta.html
@@ -18,13 +18,16 @@
             <button id="btnAdd">+</button>
         </div>
         <div class="button">
-            <button id="btnSearch">S</button>
+            <button id="btnSearch">s</button>
         </div>
         <div class="button">
-            <button id="btnGo">G</button>
+            <button id="btnEdit">e</button>
         </div>
         <div class="button">
-            <button id="btnClear">X</button>
+            <button id="btnCopy">c</button>
+        </div>
+        <div class="button">
+            <button id="btnHide">h</button>
         </div>
     </div>
     <div class="container">
