--- a/log-beta.html
+++ b/log-beta.html
@@ -32,11 +32,11 @@
     </div>
     <div class="container">
         <div class="tags">
-            <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag"/>
+            <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag" autocapitalize="none"/>
             <dv id="dvTags"></div>
         </div>
         <div class="names">
-            <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name"/>
+            <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name" autocapitalize="none"/>
             <dv id="dvNames"></div>
         </div>
         <div class="dates">
