--- a/log-beta.html
+++ b/log-beta.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div contenteditable="true" id="tb"></div>
+    <div class="container">
+        <div id="dvFilters"></div>
+    </div>
     <hr />
     <span id="spn"></span>
     <br />
