--- a/log-beta.html
+++ b/log-beta.html
@@ -16,34 +16,36 @@
     <hr />
     <span id="spn"></span>
     <br />
-    <div class="container">
-        <div class="button">
-            <button id="btnAdd">+</button>
+    <div id="dvUi">
+        <div class="container">
+            <div class="button">
+                <button id="btnAdd">+</button>
+            </div>
+            <div class="button">
+                <button id="btnSearch">s</button>
+            </div>
+            <div class="button">
+                <button id="btnEdit">e</button>
+            </div>
+            <div class="button">
+                <button id="btnCopy">c</button>
+            </div>
+            <div class="button">
+                <button id="btnHide">h</button>
+            </div>
         </div>
-        <div class="button">
-            <button id="btnSearch">s</button>
-        </div>
-        <div class="button">
-            <button id="btnEdit">e</button>
-        </div>
-        <div class="button">
-            <button id="btnCopy">c</button>
-        </div>
-        <div class="button">
-            <button id="btnHide">h</button>
-        </div>
-    </div>
-    <div class="container">
-        <div class="tags">
-            <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag" autocapitalize="none"/>
-            <dv id="dvTags"></div>
-        </div>
-        <div class="names">
-            <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name" autocapitalize="none"/>
-            <dv id="dvNames"></div>
-        </div>
-        <div class="dates">
-            <div id="dvDates"></div>
+        <div class="container">
+            <div class="tags">
+                <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag" autocapitalize="none"/>
+                <dv id="dvTags"></div>
+            </div>
+            <div class="names">
+                <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name" autocapitalize="none"/>
+                <dv id="dvNames"></div>
+            </div>
+            <div class="dates">
+                <div id="dvDates"></div>
+            </div>
         </div>
     </div>
     <div id="dv"></div>
