--- a/log-beta.html
+++ b/log-beta.html
@@ -37,11 +37,11 @@
         <div class="container">
             <div class="tags">
                 <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag" autocapitalize="none"/>
-                <dv id="dvTags"></div>
+                <div id="dvTags"></div>
             </div>
             <div class="names">
                 <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name" autocapitalize="none"/>
-                <dv id="dvNames"></div>
+                <div id="dvNames"></div>
             </div>
             <div class="dates">
                 <div id="dvDates"></div>
