--- a/log-beta.html
+++ b/log-beta.html
@@ -19,10 +19,10 @@
     <div id="dvUi">
         <div class="container">
             <div class="button">
-                <button id="btnEdit">e</button>
+                <button id="btnRefresh">r</button>
             </div>
             <div class="button">
-                <button id="btnCopy">c</button>
+                <button id="btnEdit">e</button>
             </div>
             <div class="button">
                 <button id="btnHide">h</button>
@@ -32,6 +32,9 @@
             </div>
             <div class="button">
                 <button id="btnAdd">+</button>
+            </div>
+            <div class="button" style="display: none;">
+                <button id="btnCopy">c</button>
             </div>
         </div>
         <div class="container">
