--- a/log-beta.html
+++ b/log-beta.html
@@ -17,7 +17,7 @@
     <span id="spn"></span>
     <br />
     <div id="dvUi">
-        <div class="container">
+        <div class="button-container">
             <div class="button">
                 <button id="btnRefresh">r</button>
             </div>
@@ -33,11 +33,23 @@
             <div class="button">
                 <button id="btnAdd">+</button>
             </div>
-            <div class="button" style="display: none;">
+            <div class="button">
                 <button id="btnCopy">c</button>
             </div>
+            <div class="button">
+                <button id="btn2">x</button>
+            </div>
+            <div class="button">
+                <button id="btn3">x</button>
+            </div>
+            <div class="button">
+                <button id="btn4">x</button>
+            </div>
+            <div class="button">
+                <button id="btn5">x</button>
+            </div>
         </div>
-        <div class="container">
+        <div class="tag-container">
             <div class="tags">
                 <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag" autocapitalize="none"/>
                 <div id="dvTags"></div>
