--- a/log-beta.html
+++ b/log-beta.html
@@ -52,11 +52,11 @@
         <div class="tag-container">
             <div class="tags">
                 <input type="text" id="tbTag" enterkeyhint="done" placeholder=" + tag" autocapitalize="none"/>
-                <div id="dvTags"></div>
+                <div id="dvTags" class="tag-list"></div>
             </div>
             <div class="names">
                 <input type="text" id="tbName" enterkeyhint="done" placeholder=" + name" autocapitalize="none"/>
-                <div id="dvNames"></div>
+                <div id="dvNames" class="name-list"></div>
             </div>
             <div class="dates">
                 <div id="dvDates"></div>
