--- a/log-v2/index.html
+++ b/log-v2/index.html
@@ -15,10 +15,14 @@
             <div class="action" id="dvClear">note</div>
             <div id="dvFilters"></div>            
             <div id="dvActions">
+                <div class="action" id="dvText"></div>
                 <div class="action" id="dvNumber"></div>
                 <div class="action" id="dvDate"></div>
                 <div class="action" id="dvAdd"">+</div>
             </div>            
+        </div>
+        <div id="dvLetters" class="dvLetters">
+
         </div>
         <div id="dvNumbers">
             <div>
