--- a/log-v2/index.html
+++ b/log-v2/index.html
@@ -15,7 +15,7 @@
             <div class="action" id="dvClear">note</div>
             <div id="dvFilters"></div>            
             <div id="dvActions">
-                <div class="action" id="dvText"></div>
+                <div class="action dvText" id="dvText"></div>
                 <div class="action" id="dvNumber"></div>
                 <div class="action" id="dvDate"></div>
                 <div class="action" id="dvAdd"">+</div>
