--- a/log-v2/index.html
+++ b/log-v2/index.html
@@ -21,31 +21,8 @@
                 <div class="action" id="dvAdd"">+</div>
             </div>            
         </div>
-        <div id="dvLetters" class="dvLetters">
-
-        </div>
-        <div id="dvNumbers">
-            <div>
-                <span id="spn1">1</span></td>
-                <span id="spn2">2</span></td>
-                <span id="spn3">3</span></td>
-            </div>
-            <div>
-                <span id="spn4">4</span></td>
-                <span id="spn5">5</span></td>
-                <span id="spn6">6</span></td>
-            </div>
-            <div>
-                <span id="spn7">7</span></td>
-                <span id="spn8">8</span></td>
-                <span id="spn9">9</span></td>
-            </div>
-            <div>
-                <span id="spn.">.</span></td>
-                <span id="spn0">0</span></td>
-                <span id="spn/">/</span></td>
-            </div>
-        </div>
+        <div id="dvLetters" class="dvLetters"></div>
+        <div id="dvNumbers" class="dvNumbers"></div>
     </div>
     <hr />
     <span id="spn"></span>
