--- a/log-v4/index.html
+++ b/log-v4/index.html
@@ -88,6 +88,7 @@
             }
         });
         dvContent.appendChild(dv);
+        dvContent.appendChild(document.createElement("br"));
     }
 
     addLineDiv = (content, line) => {
@@ -114,6 +115,7 @@
         spn.innerText = content;
         dv.appendChild(spn);
         dvContent.appendChild(dv);
+        dvContent.appendChild(document.createElement("br"));
     }
 
     execute = (content) => {
