--- a/log-v4/index.html
+++ b/log-v4/index.html
@@ -21,6 +21,7 @@
     const defaultTag = "note";
     const tagPattern = /#[a-z0-9-]+/g;
     const datePattern = /@[0-9\/]+/g;
+    const hash = "#";
     let tags = [];
     let dates = [];
     let data = [];
