--- a/log-v4/index.html
+++ b/log-v4/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width =device-width, initial-scale=1.0">
     <title>Log</title>
     <style>
-        body {
+        div, span {
             line-height: 1.5em;
+            white-space:pre;
         }
     </style>
 </head>
@@ -21,31 +22,38 @@
     const defaultTag = "note";
     const tagPattern = /#[a-z0-9-]+/g;
     const datePattern = /@[0-9\/]+/g;
-    const hash = "#";
+    const tagSymbol = "#";
+    const dateSymbol = "@";
+    const exclamationSymbol = "!";
+    const nameSymbol = "~";
+    const numberSymbol = "£";
     let tags = [];
     let dates = [];
     let data = [];
+    let filteredlist = [];
+    let filteredData = [];
     let dvTitle = document.getElementById("dvTitle");
     let dvContent = document.getElementById("dvContent");
     let hr = document.getElementById("hr");
+    let onFileLoad = null;
 
     window.addEventListener("load", () => {
-        load();        
+        filter();        
     });
 
     dvTitle.addEventListener("click", (event) => {
-        load();
+        filter();
     });
 
     hr.addEventListener("click", (event) => {
-        execute(prompt("command"));
+        execute(prompt("command"), true);
     });
 
-    load = () => {
+    filter = () => {
         let filter = prompt("filter");
         let filters = filter?.split(" ") ?? [];
-        tags = filters.filter(f => !f.startsWith("@"));
-        dates = filters.filter(f => f.startsWith("@")).map(d => new Date(d.substring(1)));
+        tags = filters.filter(f => !f.startsWith(dateSymbol));
+        dates = filters.filter(f => f.startsWith(dateSymbol)).map(d => new Date(d.substring(1)));
         dates = dates.length == 0 ? [new Date(new Date().toDateString())] : dates;
         if (dates.length == 1) {
             let date = new Date(dates[0]);
@@ -57,22 +65,22 @@
     }
 
     list = () => {
-        data = JSON.parse(localStorage.getItem(key) || "[]");
-        let list = data
-            .map(line => {
-                return {
-                    date: new Date(line.match(datePattern)[0].substring(1)),
-                    tags: line.match(tagPattern).map(t => t.substring(1)),
-                    text: line.replace(tagPattern, "").replace(datePattern, "").trim(),
-                    line
-                };
-            })
-            .filter(l => tags.every(t => l.tags.includes(t)) && l.date >= dates[0] && l.date <= dates[1]);
+        load();
+        let list = data.map(line => {
+            return {
+                date: new Date(line.match(datePattern)[0].substring(1)),
+                tags: line.match(tagPattern).map(t => t.substring(1)),
+                text: line.replace(tagPattern, "").replace(datePattern, "").trim(),
+                line
+            };
+        });
+        filteredList = list.filter(l => tags.every(t => l.tags.includes(t)) && l.date >= dates[0] && l.date <= dates[1]);
+        filteredData = filteredList.map(l => l.line);
 
-        dvTitle.innerText = `${tags.length > 0 ? tags.join(", ") : "all"} - ${list.length}`;
+        dvTitle.innerText = `${tags.length > 0 ? tags.join(", ") : "all"} - ${filteredList.length}`;
         dvContent.innerText = "";
         addNewDiv();
-        list.forEach(l => {
+        filteredList.forEach(l => {
             let diffTags = l.tags.filter(t => !tags.includes(t));
             let message = diffTags.length > 0 ? `${l.text} under ${diffTags.join(", ")}` : l.text;
             message = `${message} on ${l.date.toLocaleDateString("en-us", {day: "numeric", month: "numeric"})}`;
@@ -84,12 +92,12 @@
         let dv = document.createElement("div");
         dv.innerText = " + ";
         dv.addEventListener("click", (event) => {
-            let tag = (tags.length > 0 ? tags : [defaultTag]).map(t => `#${t}`).join(" ");
-            let date = `@${dates[1].toLocaleDateString("en-us")}`;
-            let text = prompt(`${tag.replaceAll("#", "")} ${date}`);
+            let tag = (tags.length > 0 ? tags : [defaultTag]).map(t => `${tagSymbol}${t}`).join(" ");
+            let date = `${dateSymbol}${dates[1].toLocaleDateString("en-us")}`;
+            let text = prompt(`${tag.replaceAll(`${tagSymbol}`, "")} ${date}`);
             if (text) {
                 data.unshift(`${date} ${tag} ${text}`);
-                localStorage.setItem(key, JSON.stringify(data));
+                save();
                 list();
             }
         });
@@ -110,7 +118,7 @@
                 data.splice(index, 1);
             }
 
-            localStorage.setItem(key, JSON.stringify(data));
+            save();
             list();
         });
       
@@ -122,17 +130,21 @@
         dvContent.appendChild(dv);
     }
 
-    execute = (content) => {
+    execute = (content, showContent = false) => {
         content ??= " ";
         let all = content.split(" ");
         let name = all[0];
         let param = content.substring(name.length + 1).trim();
-        
-        let line = data.find(l => /#function/g.test(l) && new RegExp(`(^|\\s+)!${name}($|\\s+)`).test(l));
+        dvTitle.innerText = showContent ? content : dvTitle.innerText;
+        let line = data.find(l => new RegExp(`${tagSymbol}function`, "g").test(l) && new RegExp(`(^|\\s+)${nameSymbol}${name}($|\\s+)`, "g").test(l));
         if (line) {
-            let text = line.replace("#function", "").replace(`!${name}`, "").replace(datePattern, "").trim();
+            let text = line.replace(`${tagSymbol}function`, "").replace(`${nameSymbol}${name}`, "").replace(datePattern, "").trim();
             new Function("content", `${text}`)(param);
         }
     }
+
+    load = () => data = JSON.parse(localStorage.getItem(key) || "[]");
+
+    save = () => localStorage.setItem(key, JSON.stringify(data));
 </script>
 </html>
