--- a/log-v4/index.html
+++ b/log-v4/index.html
@@ -8,6 +8,7 @@
     <style>
         div, span {
             line-height: 1.5em;
+            overflow-wrap: break-word;
         }
     </style>
 </head>
