--- a/log-v4/index.html
+++ b/log-v4/index.html
@@ -51,7 +51,7 @@
 
     filter = (filter) => {
         if (filter == "") {
-            execute("tags filter 50 false true");
+            execute("tags link");
             return;
         }
 
