--- a/log-v4/index.html
+++ b/log-v4/index.html
@@ -21,14 +21,17 @@
     const key = "data";
     const defaultTag = "note";
     const tagPattern = /#[a-z0-9-]+/g;
+    const namePattern = /~[a-z0-9-]+/g;
     const datePattern = /@[0-9\/]+/g;
     const tagSymbol = "#";
     const dateSymbol = "@";
     const exclamationSymbol = "!";
     const nameSymbol = "~";
     const numberSymbol = "£";
+    const dotSymbol = ".";
     let tags = [];
     let dates = [];
+    let names = [];
     let data = [];
     let filteredlist = [];
     let filteredData = [];
@@ -56,7 +59,8 @@
         }
 
         let filters = !!filter ? filter.split(" ").filter(f => !!f) : [];
-        tags = filters.filter(f => !f.startsWith(dateSymbol));
+        tags = filters.filter(f => !f.startsWith(dateSymbol) && !f.startsWith(dotSymbol));
+        names = filters.filter(f => f.startsWith(dotSymbol) && !!f && !!f.trim()).map(n => n.substring(1));
         dates = filters.filter(f => f.startsWith(dateSymbol)).map(d => new Date(d.substring(1)));
         dates = dates.length == 0 ? [new Date(new Date().toDateString())] : dates;
         if (dates.length == 1) {
@@ -74,11 +78,12 @@
             return {
                 date: new Date(line.match(datePattern)[0].substring(1)),
                 tags: line.match(tagPattern).map(t => t.substring(1)),
-                text: line.replace(tagPattern, "").replace(datePattern, "").trim(),
+                names: line.match(namePattern)?.map(n => n.substring(1)) ?? [],
+                text: line.replace(tagPattern, "").replace(namePattern, "").replace(datePattern, "").trim(),
                 line
             };
         });
-        filteredList = list.filter(l => tags.every(t => l.tags.includes(t)) && l.date >= dates[0] && l.date <= dates[1]);
+        filteredList = list.filter(l => tags.every(t => l.tags.includes(t)) && names.every(n => l.names.includes(n)) && l.date >= dates[0] && l.date <= dates[1]);
         filteredData = filteredList.map(l => l.line);
 
         dvTitle.innerText = `${tags.length > 0 ? tags.join(", ") : "all"} - ${filteredList.length}`;
@@ -86,7 +91,9 @@
         addNewDiv();
         filteredList.forEach(l => {
             let diffTags = l.tags.filter(t => !tags.includes(t));
+            let diffNames = l.names.filter(n => !names.includes(n));
             let message = diffTags.length > 0 ? `${l.text} under ${diffTags.join(", ")}` : l.text;
+            message = diffNames.length > 0 ? `${diffNames.join(", ")} ${message}` : message;
             message = `${message} on ${l.date.toLocaleDateString("en-us", {day: "numeric", month: "numeric"})}`;
             addLineDiv(format ? message : l.line, l.line);
         });
